<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ui.content.SettingsContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/font"
            android:textSize="@dimen/material_text_subhead"
            android:textColor="@color/primaryTextColor" />

        <Spinner
            android:id="@+id/spn_font"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/material_text_title"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/font_size"
            android:textSize="@dimen/material_text_subhead"
            android:textColor="@color/primaryTextColor" />

        <Spinner
            android:id="@+id/spn_font_size"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/material_text_title"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="7dp"
            android:text="@string/navigation"
            android:textSize="@dimen/material_text_subhead"
            android:textColor="@color/primaryTextColor" />

        <CheckBox
            android:id="@+id/cb_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/material_text_title"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

</LinearLayout>