<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/concert_one"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/material_text_display1"
                android:text="@string/app_name" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/ib_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="7dp"
                android:background="@drawable/shape_circular_search"
                android:padding="3dp"
                android:src="@drawable/ic_round_search" />

            <ImageButton
                android:id="@+id/ib_archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="7dp"
                android:padding="3dp"
                android:src="@drawable/ic_round_bookmark_border"
                android:background="@drawable/shape_circular_search" />

            <ImageButton
                android:id="@+id/ib_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="7dp"
                android:padding="3dp"
                android:src="@drawable/ic_round_download"
                android:background="@drawable/shape_circular_search" />

            <ImageButton
                android:id="@+id/ib_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="3dp"
                android:src="@drawable/ic_round_menu"
                android:background="@drawable/shape_circular_search" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/asset_banner"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popular_authors"
                            android:textSize="@dimen/material_text_headline"
                            android:fontFamily="@font/roboto_condensed_regular"
                            android:textColor="@color/primaryTextColor"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tv_view_all_popular_authors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?selectableItemBackground"
                            android:text="@string/view_all"
                            android:textSize="@dimen/material_text_button"
                            android:textColor="@color/secondaryTextColor"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_popular_authors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/books"
                            android:textSize="@dimen/material_text_headline"
                            android:fontFamily="@font/roboto_condensed_regular"
                            android:textColor="@color/primaryTextColor"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tv_view_all_continue_reading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?selectableItemBackground"
                            android:text="@string/view_all"
                            android:textSize="@dimen/material_text_button"
                            android:textColor="@color/secondaryTextColor"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_continued_books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_configuration"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_drawer"
        app:menu="@menu/drawer_configuration" />

</androidx.drawerlayout.widget.DrawerLayout>